--- a/genindex.html
+++ b/genindex.html
@@ -46,8 +46,7 @@
 <h1 id="index">Index</h1>
 
 <div class="genindex-jumpbox">
- <a href="#_"><strong>_</strong></a>
- | <a href="#A"><strong>A</strong></a>
+ <a href="#A"><strong>A</strong></a>
  | <a href="#C"><strong>C</strong></a>
  | <a href="#E"><strong>E</strong></a>
  | <a href="#M"><strong>M</strong></a>
@@ -58,22 +57,6 @@
  | <a href="#T"><strong>T</strong></a>
  
 </div>
-<h2 id="_">_</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%" valign="top"><dl>
-      
-  <dt><a href="data_structures.html#movies.Movie.__init__">__init__ (movies.Movie attribute)</a>
-  </dt>
-
-      <dd><dl>
-        
-  <dt><a href="data_structures.html#traces.Trace.__init__">(traces.Trace attribute)</a>
-  </dt>
-
-      </dl></dd>
-  </dl></td>
-</tr></table>
-
 <h2 id="A">A</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%" valign="top"><dl>
