--- a/functions.html
+++ b/functions.html
@@ -157,6 +157,7 @@ F0 (if return_f0==True)</p>
 <dd>number from 0-inf, to do with tolerance for edge finding</dd>
 </dl>
 <p>ROI object</p>
+<p>Select points by clicking, and hit enter to finalize and ROI. Hit enter again to complete selection process.</p>
 </dd></dl>
 
 </div>
